some content change

--- a/basic_html.html
+++ b/basic_html.html
@@ -103,7 +103,7 @@
         <div class="class2">
             <p>Contact us: 0301 1234567</p>
             <p>Email: autoparts@gmail.com</p>
-            <p>Location: Sankhatra, Punjab, Pakistan</p>
+            <p>Location: Lahore, Pakistan</p>
             <p>Copyright &copy; 2024 All Right Reserved By <a href="index.html">mianautoparts</p>
 
         </div>
